backend-shopapp-manifest/backend-shopapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-shopapp-service
  namespace: shopapp
spec:
  type: ClusterIP
  selector:
    app: backend-shopapp-deployment
  ports:
    - name: tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
